<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_black"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_black"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/dialog_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/share"
                android:textColor="@drawable/white"
                android:textSize="16dip" />

            <Button
                android:id="@+id/twitter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dip"
                android:text="@string/twitter"
                android:textColor="@drawable/black"
                android:textSize="15dip"
                android:textStyle="bold" >
            </Button>

            <Button
                android:id="@+id/facebook"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/facebook"
                android:textColor="@drawable/black"
                android:textSize="15dip"
                android:textStyle="bold" >
            </Button>

            <Button
                android:id="@+id/linkedin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/linkedIn"
                android:textColor="@drawable/black"
                android:textSize="15dip"
                android:textStyle="bold" >
            </Button>

            <Button
                android:id="@+id/mail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mail"
                android:textColor="@drawable/black"
                android:textSize="15dip"
                android:textStyle="bold" >
            </Button>

            <Button
                android:id="@+id/cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dip"
                android:text="@string/cancel"
                android:textColor="@drawable/black"
                android:textSize="15dip"
                android:textStyle="bold" >
            </Button>
        </LinearLayout>
    </ScrollView>

</LinearLayout>